syntax = "proto3";
package proto;
option go_package = ".";


message User {
  string UserID = 1;
  string Email = 2;
  string password = 3;
  string Username = 4 ;
}

service UserService{
  rpc CreateUser(CreateUserReq) returns (CreateUserRes);
  rpc GetUser(GetUserReq) returns (GetUserRes);
  rpc UpdateUser(UpdateUserReq) returns (UpdateUserRes);
  rpc DeleteUser(DeleteUserReq) returns (DeleteUserRes);
}

message CreateUserReq{User user = 1;}
message CreateUserRes{User user = 1;}

message GetUserReq{string userid = 1;}
message GetUserRes{User user = 1;}

message UpdateUserReq{User user = 1;}
message UpdateUserRes{User user = 1;}

message DeleteUserReq{string userId = 1;}
message DeleteUserRes{string status = 1;}